# livemap.kmcd.dev

./: .gitignore  .mise.toml  Cargo.toml  README.md  STREAM_DESCRIPTION.md  buf.gen.yaml  build.rs  create_tests.sh  fix_appstate.py  fix_brace.py  fix_clippy.py  fix_clippy2.py  fix_clippy3.py  fix_clippy4.py  fix_clippy_3.py  fix_clippy_4.py  fix_composition.py  fix_composition_2.py  fix_composition_3.py  fix_engine.py  fix_engine_alert_type.py  fix_grpc.py  fix_init.py  fix_let_chains.py  fix_max_critical_events.py  fix_max_critical_events_2.py  fix_proto.py  fix_rust_init.py  fix_struct.py  fix_struct_2.py  fix_syntax.py  fix_zero_percent.py  go.mod  go.sum  justfile  mise.toml  patch.diff  patch2.diff  patch3.diff  patch4.diff  (+96 more)
.github/workflows/: ci.yml  deploy-web.yml  release.yml
assets/shaders/: pulse_material.wgsl
cmd/bgp-viewer/: main.go
pkg/bgp/: types.go
pkg/bgp/data/cache/: ASN-PDB_net
pkg/bgpengine/: assets.go  audio_player.go  capture.go  colors.go  constants.go  country_map.go  critical_stream_test.go  engine.go  engine_bench_test.go  engine_extra_test.go  engine_test.go  grpc_worker.go  pulse_test.go  status.go  tour.go  types.go
pkg/bgpengine/data/cache/: ASN-PDB_net?fields=asn,name
pkg/geoservice/: geo.go
pkg/historical/v1/: historical.pb.go
pkg/livemap/: livemap.pb.go  livemap_grpc.pb.go
pkg/livemap/historical/v1/: historical.pb.go
pkg/livemap/livemap/v1/: livemap.pb.go  livemap_grpc.pb.go
pkg/livemap/proto/: livemap.pb.go  livemap_grpc.pb.go
pkg/livemap/proto/livemap/v1/: livemap.pb.go  livemap_grpc.pb.go
pkg/livemap/v1/: livemap.pb.go  livemap_grpc.pb.go
pkg/summary/v1/: summary.pb.go
pkg/utils/: excluded_asns.go  utils.go
proto/: livemap.proto
proto/historical/v1/: historical.proto
proto/livemap/v1/: livemap.proto
proto/summary/v1/: summary.proto
scripts/: update-index.sh
src/: bin_test.rs  classifier.rs  db.rs  main.rs  map.rs  rolling_windows.rs  rolling_windows_test.rs  stats.rs  stats_test.rs
src/indexer/: main.rs
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
web/.astro/: settings.json
web/pkg/historical/v1/: historical.pb.go
web/pkg/livemap/v1/: livemap_grpc.pb.go
web/public/data/: summary.pb
web/src/: App.css  App.tsx  cidrUtils.ts  dataService.ts
web/src/components/: BGPExplainer.tsx  ClassificationBadge.tsx  ISPSafetyTest.tsx  OrgView.tsx  ReportCard.tsx  RpkiBadge.tsx
web/src/layouts/: Layout.astro
web/src/pages/: AsnViewPage.tsx  IndexPage.tsx  OrgViewPage.tsx  OrganizationsPage.tsx  PrefixViewPage.tsx  SearchPage.tsx  index.astro
