[package]
name = "livemap"
version = "0.1.0"
edition = "2024"

[dependencies]
bgpkit-parser = { version = "0.15.0", features = ["rislive"] }
bytes = "1.11.1"
chrono = "0.4.44"
ipnet = "2.12.0"
lru = "0.16.3"
maxminddb = "0.27.3"
prost = "0.14.3"
rdkafka = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sled = "0.34.7"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tungstenite = "0.28.0"

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
