[package]
name = "livemap"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bgp-collector"
path = "src/main.rs"

[dependencies]
bgpkit-commons = { version = "0.10.2", features = ["asinfo", "rpki", "bogons", "as2rel", "mrt_collectors"] }
bgpkit-parser = { version = "0.15.0", features = ["rislive"] }
bytes = "1.11.1"
chrono = "0.4.44"
ipnet = { version = "2.12.0", features = ["serde"] }
lru = "0.16.3"
maxminddb = "0.27.3"
parking_lot = "0.12.3"
prost = "0.14.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rayon = "1.11.0"
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sled = "0.34.7"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-tungstenite = { version = "0.26.0", features = ["rustls-tls-native-roots"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tungstenite = "0.28.0"
futures-util = "0.3.31"
uuid = { version = "1.22.0", features = ["v4"] }
log = "0.4.29"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.9"

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"

[dev-dependencies]
tempfile = "3.27.0"

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "test_bin"
path = "src/bin_test.rs"
